Variant specific competition score entries

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -225,7 +225,7 @@
           %li#c-lowest-score
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-lowest-score.png"}
             %span
-              Lowest scoring ascension (modulo depth)
+              Lowest scoring ascension
           %li#c-most-conducts
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-most-conducts.png"}
             %span
