Rename realtime and gametime to wall-clock time and turns

--- a/views/_user_games.haml
+++ b/views/_user_games.haml
@@ -12,10 +12,10 @@
         %td Most ascensions
         %td.table_number= h @userscore.most_ascensions variant
       %tr#cell2
-        %td Fastest ascension (gametime)
+        %td Fastest ascension (by turns)
         %td.table_number= h @userscore.fastest_ascension_gametime variant
       %tr#cell1
-        %td Fastest ascension (realtime)
+        %td Fastest ascension (by wall-clock time)
         %td.table_number= h @userscore.fastest_ascension_realtime variant
       %tr#cell2
         %td Highest scoring ascension
