--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -213,11 +213,11 @@
           %li#c-fastest-gametime
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-fastest-gametime.png"}
             %span
-              Fastest ascension (gametime)
+              Fastest ascension (by turns)
           %li#c-fastest-realtime
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-fastest-realtime.png"}
             %span
-              Fastest ascension (realtime)
+              Fastest ascension (by wall-clock time)
           %li#c-highest-score
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/c-highest-score.png"}
             %span
