--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -543,6 +543,11 @@ form#login_form > fieldset > input[type=submit].active:hover {
     text-align: center;
     margin: 20px 0;
 }
+#footer img,
+#footer a {
+    vertical-align: baseline;
+    margin-bottom: -5px;
+}
 
 
 /**************************
