Really put grey border into /ascensions and /games

--- a/views/last_games_played.haml
+++ b/views/last_games_played.haml
@@ -1,3 +1,4 @@
 .content_bulk
-    .text_content
-        =haml :games_played
+    .text_content_wrapper
+        .text_content
+            =haml :games_played
