Rename Individual Trophies to Cross-Variant Trophies

--- a/views/_trophy_scores.haml
+++ b/views/_trophy_scores.haml
@@ -1,7 +1,7 @@
 %h2
     Trophies
 .trophycabinet
-    %h3 Individual
+    %h3 Cross-Variant
     %ul
         - ["king_of_the_world", "globetrotter", "sightseeing_tour"].each do |individualtrophy|
             %li
