--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -7,7 +7,7 @@
         %h2
           Trophies
         %h3
-          Individual
+          Cross-Variant
         %ul.trophypage
           %li#sightseeing
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/sightseeing.png"}
