--- a/views/user.haml
+++ b/views/user.haml
@@ -28,7 +28,7 @@
                     - if @player.individualtrophies.count > 0
                         %li
                             .trophyleft
-                                Individual
+                                Cross-Variant
                             .trophyright
                                 - for individualtrophy in @player.individualtrophies
                                     %a.imagelink{:title => $trophy_names[individualtrophy.trophy], :href => "/trophies#" + individualtrophy.icon[0 .. (individualtrophy.icon.length - 5)]}
