--- a/views/scoreboard.haml
+++ b/views/scoreboard.haml
@@ -8,6 +8,6 @@
     .text_content.non_top_post
       =haml :_trophy_scores
     .text_content.non_top_post
-      =haml :generic_scores
+      =haml :competition_scores
     %span#end_of_content_spacer.clear
 / end of container
