Polish /activity a bit

--- a/views/activity.haml
+++ b/views/activity.haml
@@ -1,7 +1,7 @@
 .content_bulk
   .text_content_wrapper
     .text_content
-      %h2 Ascensions per day
+      %h2 Ascensions per Day
       .scorelisting
         %table.greytable
           %tr
@@ -16,7 +16,7 @@
               %td.table_number= game.count
 
     .text_content.non_top_post
-      %h2 Games per day
+      %h2 Finished Games per Day (without obvious start scummers)
       .scorelisting
         %table.greytable
           %tr
@@ -31,7 +31,7 @@
               %td.table_number= game.count
 
     .text_content.non_top_post
-      %h2 New users per day
+      %h2 New Users per Day
       .scorelisting
         %table.greytable
           %tr
