--- a/views/activity.haml
+++ b/views/activity.haml
@@ -12,7 +12,7 @@
             - style = (count % 2) == 0 ? "cell1" : "cell2"
             - count += 1
             %tr{:id => style}
-              %td.tabe_date= h game.datum
+              %td.table_date= h game.datum
               %td.table_number= game.count
 
     .text_content.non_top_post
@@ -27,7 +27,7 @@
             - style = (count % 2) == 0 ? "cell1" : "cell2"
             - count += 1
             %tr{:id => style}
-              %td.tabe_date= h game.datum
+              %td.table_date= h game.datum
               %td.table_number= game.count
 
     .text_content.non_top_post
@@ -42,5 +42,5 @@
             - style = (count % 2) == 0 ? "cell1" : "cell2"
             - count += 1
             %tr{:id => style}
-              %td.tabe_date= h game.date
+              %td.table_date= h game.date
               %td.table_number= game.count
