--- a/views/user.haml
+++ b/views/user.haml
@@ -8,7 +8,7 @@
                 - else
                     | #{h @player.games.length} Games Played
             - server_accounts = (Server.all - @player.servers)
-            %table#accountlist.greytable
+            %table.greytable
                 %tr
                     %th Server
                     %th Account
