Restyled navigation lots - may need more.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -12,7 +12,7 @@
           %h1
             Navigation
           %ul
-            %li
+            %li.first
               %a{:href => "/"} 
                 %img{:alt => "Logo", :src => "/vivid_divider.png"}/
             %li
