Add css class "misc" to activity tables

--- a/views/activity.haml
+++ b/views/activity.haml
@@ -3,7 +3,7 @@
     .text_content
       %h2 Ascensions per Day
       .scorelisting
-        %table.greytable
+        %table.greytable.misc
           %tr
             %th Date (UTC)
             %th
@@ -18,7 +18,7 @@
     .text_content.non_top_post
       %h2 Finished Games per Day (without obvious start scummers)
       .scorelisting
-        %table.greytable
+        %table.greytable.misc
           %tr
             %th Date (UTC)
             %th
@@ -33,7 +33,7 @@
     .text_content.non_top_post
       %h2 New Users per Day
       .scorelisting
-        %table.greytable
+        %table.greytable.misc
           %tr
             %th Date (UTC)
             %th
