--- a/views/layout.haml
+++ b/views/layout.haml
@@ -14,7 +14,7 @@
           %ul
             %li.first
               %a{:href => "/"} 
-                %img{:alt => "Logo", :src => "/vivid_divider.png"}/
+                %img{:alt => "Home", :src => "/vivid_divider2.png"}/
             %li
               - if !@logged_in then
                 %a{:href => "/home"} #{h @user.login}
