Erm, stay with original for css-disabled, since new arrangement uses a sprite.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -14,7 +14,7 @@
           %ul
             %li.first
               %a{:href => "/"} 
-                %img{:alt => "Home", :src => "/vivid_divider2.png"}/
+                %img{:alt => "Home", :src => "/vivid_divider.png"}/
             %li
               - if !@logged_in then
                 %a{:href => "/home"} #{h @user.login}
