Added a .main to main nav. Check home.html for rudimentary hover menu - no idea why it's displaying below the rest of the content.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -11,7 +11,7 @@
           / use of the nav element: http://www.webteacher.ws/2009/07/09/html5-the-nav-element
           %h1
             Navigation
-          %ul
+          %ul.main
             %li.first
               %a{:href => "/"} 
                 %img{:alt => "Home", :src => "/vivid_divider.png"}/
