--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -210,7 +210,7 @@ form#login_form > fieldset > input[type=submit],
 #topnav .main > li > a.active, #topnav .main > li > a.active:hover,
 #topnav .main > li > a:hover {
     color: #000;
-    background-color: #eee;
+    background-color: #ccc;
 }
 #topnav .main > li.first > a.active,
 #topnav .main > li.first > a.active:hover,
