Add /activity and /ascensions to hover menu

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -22,6 +22,11 @@
                 %a{:href => "/login"} Login
             %li
               %a{:href => "/scoreboard"} Scoreboard
+              %ul
+                %li.first
+                  %a{:href => "/activity"} Activity
+                %li
+                  %a{:href => "/ascensions"} Ascensions
             %li
               - if !@logged_in then
                 %a{:href => "/logout"} Logout
