--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -13,16 +13,24 @@
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/sightseeing.png"}
             %span
               Sightseeing tour: finish a game in all variants (die after 1000 turns or ascend)
-            
+
           %li#globetrotter
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/globetrotter.png"}
             %span
               Globetrotter: get a trophy for each variant
-            
+
+          %li#anti-stoner
+            %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/anti-stoner.png"}
+            %span
+              Anti-Stoner: defeat Medusa in all variants
+
           %li#king
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/king.png"}
             %span
               King of the world: ascend in all variants
+
+        %p{:style => "font-size: 0.9em;"} "All variants" means Vanilla NetHack, SporkHack, UnNetHack and AceHack. NetHack 1.3d does not contribute to the completion of these trophies.
+
         .text_content.non_top_post
         %h3
           All Variants
