New achievement: Escapologist: escaped in celestial disgrace

--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -143,6 +143,10 @@
                 %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/m-astral.png"}
                 %span
                   enter the Astral Plane
+              %li#escapologist
+                %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/escapologist.png"}
+                %span
+                  Escapologist: escape in celestial disgrace
         .text_content.non_top_post
         %h3
           AceHack and UnNetHack
