Menu arrow with li.long(er|est) ul and li.short(er|est) ul, also transparent bg with fallback for imageless browsing.

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -20,7 +20,7 @@
                 %a{:href => "/home"} #{h @user.login}
               - if @logged_in then
                 %a{:href => "/login"} Login
-            %li
+            %li.short
               %a{:href => "/scoreboard"} Scoreboard
               %ul
                 %li.first
