--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -230,20 +230,34 @@ form#login_form > fieldset > input[type=submit],
 submenus
 ********/
 #topnav .main li ul {
+  background-image: url(menu-arrow.png);
+  background-repeat: no-repeat;
+  background-position: 40px 0;
+  padding-top: 5px;
   position: absolute;
   display: none;
   width: 150px;
 }
+/* Also, if the position of the arrow is wrong, put a class on it :) */
+#topnav .main li.long ul {  background-position: 50px 0;  }
+#topnav .main li.longer ul {  background-position: 60px 0;  }
+#topnav .main li.verylong ul {  background-position: 70px 0;  }
+#topnav .main li.short ul {  background-position: 30px 0;  }
+#topnav .main li.shorter ul {  background-position: 20px 0;  } 
+#topnav .main li.veryshort ul {  background-position: 10px 0; }
+
 #topnav li:hover ul {
   display: block;
 }
 /* Specificity in case we decide we want to add 2ndary menus */
 #topnav .main > li > ul > li {
   background-color: #555;
+  background-image: url(blacktransparent.png);
+  background-repeat: no-repeat;
   text-align: left;
 }
 #topnav .main > li > ul > li > a {
-  border-top: 1px solid #666;
+  border-top: 1px solid #777;
   color: #fff;
 }
 #topnav .main > li > ul > li.first a {
@@ -252,7 +266,7 @@ submenus
 #topnav .main > li > ul > li > a:active,
 #topnav .main > li > ul > li > a:hover,
 #topnav .main > li > ul > li > a.active:active {
-    background-color: #777;
+    background-color: #666;
 }
 
 /**************************
