--- a/views/_clan_trophies.haml
+++ b/views/_clan_trophies.haml
@@ -10,10 +10,10 @@
       %th 
         Rank
     - count = 0
-    - ClanScoreEntry.all(:order => [:rank.asc]).each do |entry| 
-      - if count >= 3
-        - break
-      %tr#cell1
+    - ClanScoreEntry.all(:order => [:rank.asc], :conditions => [ 'rank <= 3' ]).each do |entry|
+      - style = (count % 2) == 0 ? "cell1" : "cell2"
+      - count += 1
+      %tr{:id => style}
         %td
           %a{:href => "/clan/#{CGI::escape entry.clan.name}"}
             #{h entry.clan.name}
@@ -21,4 +21,3 @@
           #{h entry.value}
         %td.table_number
           #{h entry.rank}
-      - count += 1
