--- a/views/clan.haml
+++ b/views/clan.haml
@@ -32,7 +32,7 @@
     .text_content.non_top_post#clan_members
       %h2
         Clan members
-      %table.prettytable
+      %table.prettytable.clan_members
         %tr
           %th
             Player
@@ -63,6 +63,30 @@
               #{h user.accounts.all(:clan => @clan).length}
             %td
               #{h user.scoreentries.length}
+
+    .text_content.non_top_post#most_ascended_combinations
+      %h2 Ascended combinations
+      .scorelisting
+        %table.greytable.misc
+          %tr
+            %th Variant
+            %th Role
+            %th Race
+            %th Alignment
+            %th Gender
+          - count = 0
+          - $variants.each do |variant|
+            - combinations = repository.adapter.select most_ascended_combinations_sql+" and version = ?", @clan.name, variant
+            - combinations.each do |c|
+              - style = (count % 2) == 0 ? "cell1" : "cell2"
+              - count += 1
+              %tr{:id => style}
+                %td= h $variants_mapping[c.version]
+                %td= h c.role
+                %td= h c.race
+                %td= h c.align0
+                %td= h c.gender0
+
     - if !@logged_in
       - if @user.login == @clan.get_admin.login
         .text_content.non_top_post#clan_invite
