--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -616,7 +616,7 @@ a#flattr {
 }
 table.prettytable th,
 /* specificity override for padding */
-#clan_page table tr/*<--extraspecific*/ th,
+#clan_page table.clan_members tr/*<--extraspecific*/ th,
 table#clans th,
 table#servers th {
     text-align: left;
