Add ascended combinations table to user and home page

--- a/views/clan.haml
+++ b/views/clan.haml
@@ -64,28 +64,10 @@
             %td
               #{h user.scoreentries.length}
 
-    .text_content.non_top_post#most_ascended_combinations
-      %h2 Ascended combinations
-      .scorelisting
-        %table.greytable.misc
-          %tr
-            %th Variant
-            %th Role
-            %th Race
-            %th Alignment
-            %th Gender
-          - count = 0
-          - $variants.each do |variant|
-            - combinations = repository.adapter.select most_ascended_combinations_sql+" and version = ?", @clan.name, variant
-            - combinations.each do |c|
-              - style = (count % 2) == 0 ? "cell1" : "cell2"
-              - count += 1
-              %tr{:id => style}
-                %td= h $variants_mapping[c.version]
-                %td= h c.role
-                %td= h c.race
-                %td= h c.align0
-                %td= h c.gender0
+    .text_content.non_top_post
+      - @ascended_combinations_sql = ascended_combinations_sql
+      - @ascended_combinations_value = @clan.name
+      =haml :ascended_combinations
 
     - if !@logged_in
       - if @user.login == @clan.get_admin.login
