--- a/views/home.haml
+++ b/views/home.haml
@@ -92,6 +92,10 @@
             =haml :_user_games
         .text_content.non_top_post
             =haml :games_played
+        .text_content.non_top_post
+            - @ascended_combinations_sql = ascended_combinations_user_sql
+            - @ascended_combinations_value = @user.id
+            =haml :ascended_combinations
         #clanmanager.text_content.non_top_post
             %h2
                 Manage your clans
