--- a/views/user.haml
+++ b/views/user.haml
@@ -82,6 +82,10 @@
             =haml :_player_games
         .text_content.non_top_post
             =haml :games_played
+        .text_content.non_top_post
+            - @ascended_combinations_sql = ascended_combinations_user_sql
+            - @ascended_combinations_value = @player.id
+            =haml :ascended_combinations
         #clanmanager.text_content.non_top_post
             - for account in @player.accounts
                 .account-clan
