--- a/views/_clan_trophies.haml
+++ b/views/_clan_trophies.haml
@@ -1,7 +1,7 @@
 %h2
   Clan Competition
 .scorelisting
-  %table.greytable
+  %table.greytable.misc
     %tr
       %th 
         Clan
@@ -10,14 +10,14 @@
       %th 
         Rank
     - count = 0
-    - ClanScoreEntry.all(:order => [:rank.asc], :conditions => [ 'rank <= 3' ]).each do |entry|
+    - ClanScoreEntry.all(:order => [:rank.asc], :trophy => 'clan_winner').each do |entry|
       - style = (count % 2) == 0 ? "cell1" : "cell2"
       - count += 1
       %tr{:id => style}
         %td
           %a{:href => "/clan/#{CGI::escape entry.clan.name}"}
             #{h entry.clan.name}
-        %td
-          #{h entry.value}
+        %td.table_number
+          #{h entry.points}
         %td.table_number
           #{h entry.rank}
