--- a/views/clan.haml
+++ b/views/clan.haml
@@ -24,11 +24,11 @@
       #clan_trophies
         %h2
           Clan trophies
-        - if ClanScoreEntry.all(:clan_name => @clan.name).length != 0
-          - ClanScoreEntry.all(:clan_name => @clan.name, :rank => 1).each do |trophy|
-            %a.imagelink{:href => "/trophies#" + trophy.icon[0 .. (trophy.icon.length - 5)], :title => trophy.trophy} 
-              %span.trophyicon
-                %img{:src => "/icons/" + trophy.icon}
+        / TODO: trophy image for clan competition winner
+        - ClanScoreEntry.all(:clan_name => @clan.name, :trophy.not => 'clan_winner', :rank => 1).each do |trophy|
+          %a.imagelink{:href => "/trophies#" + trophy.icon[0 .. (trophy.icon.length - 5)], :title => trophy.trophy} 
+            %span.trophyicon
+              %img{:src => "/icons/" + trophy.icon}
     .text_content.non_top_post#clan_members
       %h2
         Clan members
