Styling of clan competition tables

--- a/views/clan_competition_trophy.haml
+++ b/views/clan_competition_trophy.haml
@@ -4,9 +4,10 @@
     %tr
       %th
         Clan
-      %th
-        Score
-      %th
+      %th.competition_value
+      %th.competition_value
+        Clan Points
+      %th.competition_placing
         Rank
     - count = 0
     - ClanScoreEntry.all(:order => [:rank.asc], :trophy => @trophy, :value.gt => 0).each do |entry|
@@ -18,5 +19,7 @@
             #{h entry.clan.name}
         %td.table_number
           #{h entry.value}
+        %td.table_number
+          #{h entry.points}
         %td.table_number
           #{h entry.rank}
