--- a/views/clan_competition.haml
+++ b/views/clan_competition.haml
@@ -2,6 +2,7 @@
   .text_content_wrapper
     .text_content
       %h1 Clan Competition Overview
+      =haml :_clan_trophies
       - @trophy = "most_points"
       =haml :clan_competition_trophy
       - @trophy = "most_ascended_combinations"
