--- a/views/footer.haml
+++ b/views/footer.haml
@@ -8,11 +8,7 @@
     %a{:href => "/rules"} Rules
     ]
     [
-    %a{:href => "/games"} Games
-    \-
-    %a{:href => "/users"} Users
-    \-
-    %a{:href => "/clans"} Clans
+    %a{:href => "/activity"} Activity
     \-
     %a{:href => "/servers"} Servers
     \-
