--- a/webmocks/alt_design2/style-xiella.css
+++ b/webmocks/alt_design2/style-xiella.css
@@ -231,19 +231,18 @@ submenus
 #topnav .main li ul {
   background-image: url(menu-arrow.png);
   background-repeat: no-repeat;
-  background-position: 40px 0;
+  background-position: 25px 0;
   padding-top: 5px;
   position: absolute;
   display: none;
   width: 150px;
 }
 /* Also, if the position of the arrow is wrong, put a class on it :) */
-#topnav .main li.long ul {  background-position: 50px 0;  }
-#topnav .main li.longer ul {  background-position: 60px 0;  }
-#topnav .main li.verylong ul {  background-position: 70px 0;  }
-#topnav .main li.short ul {  background-position: 30px 0;  }
-#topnav .main li.shorter ul {  background-position: 20px 0;  } 
-#topnav .main li.veryshort ul {  background-position: 10px 0; }
+#topnav .main li.longer ul {  background-position: 30px 0;  }
+#topnav .main li.shorter ul {  background-position: 20px 0;  }
+/* add more with more numbers at the end as necessary */
+#topnav .main li.longer1 ul {  background-position: 27px 0;  }
+#topnav .main li.shorter1 ul {  background-position: 22px 0;  }
 
 #topnav li:hover ul {
   display: block;
