--- a/views/deaths.haml
+++ b/views/deaths.haml
@@ -1,14 +1,29 @@
 .content_bulk
   .text_content_wrapper
     .text_content
-      %h2 All Deaths
+      %h2#deaths All deaths (unfiltered)
       .scorelisting
         %table.greytable.misc
           %tr
             %th Count
             %th Death
           - count = 0
-          - @deaths.each do |death|
+          - @unique_deaths.each do |death|
+            - style = (count % 2) == 0 ? "cell1" : "cell2"
+            - count += 1
+            %tr{:id => style}
+              %td.table_number= death.count
+              %td= h death.death
+    .text_content.non_top_post
+      %h2#unique_deaths Unique deaths (filtered)
+      %h3= "(eligible for <a href='/trophies#clan-deaths'>Most unique deaths for Clan Competition</a>)"
+      .scorelisting
+        %table.greytable.misc
+          %tr
+            %th Count
+            %th Death
+          - count = 0
+          - @unique_deaths.each do |death|
             - style = (count % 2) == 0 ? "cell1" : "cell2"
             - count += 1
             %tr{:id => style}
