--- a/views/trophies.haml
+++ b/views/trophies.haml
@@ -260,7 +260,6 @@
               Most points
           %li#clan-deaths
             %img{:style => "vertical-align:middle", :alt => "All Conducts Logo", :src => "/icons/clan-deaths.png"}
-            %span
-              Most unique deaths
+            %span= "Most unique deaths (<a href='/deaths#unique_deaths'>look here for unique deaths of played games</a>)"
         .text_content.non_top_post
     %span#end_of_content_spacer.clear
